Added support for Timestamp, Time, Date (java.sql) and java.util.Date classes.
Still pending format validations.

--- a/QueryBuilder/src/log4j.properties
+++ b/QueryBuilder/src/log4j.properties
@@ -8,7 +8,7 @@ log4j.appender.daily=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 
 #NOMBRE DEL ARCHIVO DEL LOG
-log4j.appender.daily.File=QueryBuilder.log
+log4j.appender.daily.File=log/QueryBuilder.log
 log4j.category.org=ERROR
 
 #AL REARRANCAR EL SERVIDOR NO BORRA EL LOG
